# computer_use_boilerplates

./: .gitignore  README.md  pyproject.toml
gemini_computer_use/: README.md  env.example  main.py  requirements.txt  server.py
gemini_computer_use/agent/: browser.py  config.py  core.py  gemini_client.py  utils.py
gemini_computer_use/api/: routes.py
gemini_standalone/: README.md  env.example  main.py  requirements.txt  server.py
gemini_standalone/agent/: auto_tool.py  browser.py  config.py  core.py  gemini_client.py  image_utils.py  system_prompt.py
gemini_standalone/api/: main.py  routes.py
