[project]
name = "computer-use-boilerplates"
version = "0.1.0"
description = "Boilerplate templates for LLM-powered computer use with various models and browser automation tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.55.0",
    "pytest-playwright>=0.7.1",
    "python-dotenv>=1.2.1",
]

[tool.uv.workspace]
members = [
    "computer-use-boilerplates",
]

[dependency-groups]
gemini-computer-use = [
    "google-genai>=1.47.0",
]
